  on a per preset basis (as proposed for Lionstracs' Mediastation).

- Server state now shown (back gain) on the system tray icon tooltip; 
  speaking of which, tooltips are now also featured on connections, status
  and patchbay windows.

- Actual hardware device selection menu now featured on setup dialog; this
  button menus are only available for the ALSA driver settings.
  

0.2.14   2005-01-23  More progressive optimizations.

- Put a limit on XRUN callback messages and statistics report rate, preventing
  the potential hosing of the GUI due to a XRUN cascade storm. The maximum
  reasonable report rate has been fixed to be one XRUN callback occurrence 
  per second.

- Set to ignore the SIGPIPE ("Broken pipe") signal, where available, as the
  default handler is usually fatal when a JACK client is zombified abruptly.

- All conection view items are now sorted in natural case insensitive order,
  not just as audio port names as was before.

- Got rid of those nonsense paranoid and rather stupid pseudo-mutex guards on 
  the connections management framework and event notifications (nuff said :).

- Optional confirmation warning on audio server shutdown, if there's some
  audio clients still active and connected (as suggested by Sampo Savolainen).

- Check for <jack/statistics.h> on configure time (as of JACK 0.99.42+ CVS).

- "Unlock memory" server setup option was added, allowing the release
  of memory used by common toolkit libraries (GTK+, Qt, FLTK, Wine) that
  were being superfluously locked on every GUI JACK client; number of periods
  has now the minimum allowed value of 2; server start delay widget converted
  to spinbox; setup dialog layout slighly changed.

- Removed stand-alone usx2y driver support. Since JACK 0.99.41+ CVS, the
  special "rawusb" support on the Tascam US-122/224/428 USB Audio/MIDI
  interface controllers have been merged and properly integrated into the
  regular alsa backend driver. Being still experimental, this special mode